--- a/assets/styles/framework/typography.less
+++ b/assets/styles/framework/typography.less
@@ -1,9 +1,17 @@
 @primary-font: 'SpaceMono', monospace;
 @secondary-font: 'Poppins';
-@title-text: 10pt;
+@title-text: 11pt;
 @text-size: 10pt;
 @mini-text-size: 9pt;
 @micro-text-size: 8pt;
+
+.family-primary {
+  font-family: @primary-font;
+}
+
+.family-secondary {
+  font-family: @secondary-font;
+}
 
 .ellipsis {
   text-overflow: ellipsis;
