--- a/components/interactables/AsideMenu/AsideMenu.less
+++ b/components/interactables/AsideMenu/AsideMenu.less
@@ -3,6 +3,7 @@
     a {
       -webkit-user-drag: none;
       &:extend(.no-select);
+      font-family: @primary-font;
     }
     margin-bottom: @normal-spacing;
   }
