--- a/components/interactables/Input/Input.less
+++ b/components/interactables/Input/Input.less
@@ -28,23 +28,3 @@
   }
   position: relative;
 }
-
-.input {
-  font-size: @text-size;
-  &.is-normal {
-    height: 2.3rem;
-  }
-  &:disabled {
-    &::placeholder {
-      /* without !important it does not work */
-      color: grey !important;
-    }
-  }
-  &.invalid {
-    border: 1px solid @red;
-  }
-
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
