--- a/components/views/chat/search/input/Input.less
+++ b/components/views/chat/search/input/Input.less
@@ -74,6 +74,7 @@
   height: 30px;
   line-height: 30px;
   font-size: @text-size;
+  font-family: @secondary-font;
   padding: 0 5px;
   padding-left: 1.8rem;
 }
@@ -152,6 +153,7 @@
   }
 
   .search-for {
+    font-family: @primary-font;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
